--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <button class="clickbtn"><a href="https://github.com/anshika1812" target="_blank">Visit My GitHub</a></button>
          </div>
          <div class="rightone">
-            <img src="Me1.png" alt="Oops!">
+            <img src="Portfolio_images/Me1.png" alt="Oops!">
          </div>
       </section>
    </main>
