--- a/certificates.html
+++ b/certificates.html
@@ -30,17 +30,17 @@
    <main>
       <section class="ctopsec">
          <div class="ctopleft">
-            <a href="https://drive.google.com/file/d/1CvyiVVdwvNi7UW0_kkJ6LROtbGFvNEKv/view?usp=drivesdk" target="_blank"><img src="NPTEL1.jpg" class="c1"></a>
+            <a href="https://drive.google.com/file/d/1CvyiVVdwvNi7UW0_kkJ6LROtbGFvNEKv/view?usp=drivesdk" target="_blank"><img src="Portfolio_images/NPTEL1.jpg" class="c1"></a>
          </div>
          <div class="ctopright"><b>This is the Elite Certificate of my first NPTEL Course, "Data Analytics with Python".</b><br>
-         Click on the image for a better view, or check it out by clicking below:<br><br><a href="https://www.linkedin.com/posts/anshika-chhabra-97ab05257_iitroorkee-firstpost-dataanalytics-activity-7063900194555252736-6gD9?utm_source=share&utm_medium=member_android" target="_blank"><img src="Li_logo.png"></a></div>
+         Click on the image for a better view, or check it out by clicking below:<br><br><a href="https://www.linkedin.com/posts/anshika-chhabra-97ab05257_iitroorkee-firstpost-dataanalytics-activity-7063900194555252736-6gD9?utm_source=share&utm_medium=member_android" target="_blank"><img src="Portfolio_images/Li_logo.png"></a></div>
       </section>
       <section class="cbottomsec">
          <div class="cbottomleft">
-            <a href="https://drive.google.com/file/d/1E6mLUCItk3W4JHx98f9p7W9wu1QHAjev/view?usp=drivesdk" target="_blank"><img src="TechH2.jpg" class="c1"></a>
+            <a href="https://drive.google.com/file/d/1E6mLUCItk3W4JHx98f9p7W9wu1QHAjev/view?usp=drivesdk" target="_blank"><img src="Portfolio_images/TechH2.jpg" class="c1"></a>
          </div>
          <div class="cbottomright"><b>This is the Certificate of Completion of my first Internship offered by TechnoHacks EduTech in the domain of C Programming.</b><br>
-         Click on the image for a better view, or check it out by clicking below:<br><br><a href="https://www.linkedin.com/posts/anshika-chhabra-97ab05257_internship-opportunity-technohacksedutech-activity-7080844524561870848-jxi9?utm_source=share&utm_medium=member_android" target="_blank"><img src="Li_logo.png"></a></div>
+         Click on the image for a better view, or check it out by clicking below:<br><br><a href="https://www.linkedin.com/posts/anshika-chhabra-97ab05257_internship-opportunity-technohacksedutech-activity-7080844524561870848-jxi9?utm_source=share&utm_medium=member_android" target="_blank"><img src="Portfolio_images/Li_logo.png"></a></div>
       </section>
    </main>
 </body>
