--- a/contactme.html
+++ b/contactme.html
@@ -29,20 +29,20 @@
     <main>
         <section class="contact">
             <div class="contactleft">
-                <img src="Li_logo.png">
+                <img src="Portfolio_images/Li_logo.png">
             </div>
             <section class="contactright"><a href="https://www.linkedin.com/in/anshika-chhabra-97ab05257" target="_blank">Anshika Chhabra</a></section>
             <!-- <p>Anshika Chhabra</p> -->
         </section>
         <section class="contact">
             <div class="contactleft">
-                <img src="Twi_logo.png">
+                <img src="Portfolio_images/Twi_logo.png">
             </div>
             <section class="contactright"><a href="https://twitter.com/anshikachhabra_?t=3RrhUtepEoxbRAks5AzKbw&s=09" target="_blank">@anshikachhabra_</a></section>
         </section>
         <section class="contact">
             <div class="contactleft">
-                <img src="GiH_logo.png">
+                <img src="Portfolio_images/GiH_logo.png">
             </div>
             <section class="contactright"><a href="https://github.com/anshika1812" target="_blank">anshika1812</a></section>
         </section>
