--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Anshika Chhabra-Portfolio_2023</title>
    <link rel="stylesheet" href="style.css">
-   <link href="<link rel=" preconnect" href="https://fonts.googleapis.com">
+   <link href="link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
 </head>
@@ -39,7 +39,7 @@
                This is my very first website & through this, you can view my sketches, certificates & contact me as
                well!
             </p><br>
-            <button class="clickbtn"><a href="https://github.com/anshika1812" target="_blank">Visit My GitHub</a></button>
+            <button class="clickbtn"><a href="https://github.com/anshika1812" target="_blank"><b>Visit My GitHub</b></a></button>
          </div>
          <div class="rightone">
             <img src="Portfolio_images/Me1.png" alt="Oops!">
