--- a/certificates.html
+++ b/certificates.html
@@ -16,10 +16,15 @@
    <header>
       <nav>
          <div class="left"><b>Anshika here! :)</b></div>
+         <div class="menu-toggle" onclick="toggleMenu()">
+            <span></span>
+            <span></span>
+            <span></span>
+         </div>
          <div class="right">
             <ul>
                <li><a href="index.html">Home</a></li>
-               <li><a href="certificates.html">Certificates</a></li>
+               <li><a href="certificates.html" class="active">Certificates</a></li>
                <li><a href="projects.html">Projects</a></li>
                <li><a href="contactme.html">Contact Me</a></li>
             </ul>
@@ -30,25 +35,69 @@
    <main>
       <section class="csec">
          <div class="cleft">
-            <a href="https://drive.google.com/file/d/1CvyiVVdwvNi7UW0_kkJ6LROtbGFvNEKv/view?usp=drivesdk" target="_blank"><img src="Portfolio_images/NPTEL1.jpg" class="c1"></a>
+            <a href="https://drive.google.com/file/d/1CvyiVVdwvNi7UW0_kkJ6LROtbGFvNEKv/view?usp=drivesdk" target="_blank"><img src="Portfolio_images/NPTEL_1.jpg"></a>
          </div>
-         <div class="cright"><b>This is the Elite Certificate of my first NPTEL Course, "Data Analytics with Python".</b><br>
+         <div class="cright"><b>This is the <span>Elite Certificate</span> of my first <span>NPTEL</span> Course, <span>"Data Analytics with Python"</span>.</b><br>
          Click on the image for a better view, or check it out by clicking below:<br><br><a href="https://www.linkedin.com/posts/anshika-chhabra-97ab05257_iitroorkee-firstpost-dataanalytics-activity-7063900194555252736-6gD9?utm_source=share&utm_medium=member_android" target="_blank"><img src="Portfolio_images/Li_logo.png"></a></div>
       </section>
       <section class="csec">
          <div class="cleft">
-            <a href="https://drive.google.com/file/d/1E6mLUCItk3W4JHx98f9p7W9wu1QHAjev/view?usp=drivesdk" target="_blank"><img src="Portfolio_images/TechH2.jpg" class="c1"></a>
+            <a href="https://drive.google.com/file/d/1E6mLUCItk3W4JHx98f9p7W9wu1QHAjev/view?usp=drivesdk" target="_blank"><img src="Portfolio_images/TechH2.jpg"></a>
          </div>
-         <div class="cright"><b>This is the Certificate of Completion of my first Internship offered by TechnoHacks EduTech in the domain of C Programming.</b><br>
+         <div class="cright"><b>This is the <span>Certificate of Completion</span> of my first <span>Internship</span> offered by <span>TechnoHacks EduTech</span> in the domain of <span>C Programming</span>.</b><br>
          Click on the image for a better view, or check it out by clicking below:<br><br><a href="https://www.linkedin.com/posts/anshika-chhabra-97ab05257_internship-opportunity-technohacksedutech-activity-7080844524561870848-jxi9?utm_source=share&utm_medium=member_android" target="_blank"><img src="Portfolio_images/Li_logo.png"></a></div>
       </section>
-      <!-- <section class="csec">
+      <section class="csec">
          <div class="cleft">
-            <a href="https://drive.google.com/file/d/1CvyiVVdwvNi7UW0_kkJ6LROtbGFvNEKv/view?usp=drivesdk" target="_blank"><img src="Portfolio_images/Flipkart_Grid_P_23.jpg" class="c1"></a>
+            <a href="/" target="_blank"><img src="Portfolio_images/Flipkart_Grid_P_23.jpg"></a>
          </div>
-         <div class="cright"><b>This is the Elite Certificate of my first NPTEL Course, "Data Analytics with Python".</b><br>
-         Click on the image for a better view, or check it out by clicking below:<br><br><a href="https://www.linkedin.com/posts/anshika-chhabra-97ab05257_iitroorkee-firstpost-dataanalytics-activity-7063900194555252736-6gD9?utm_source=share&utm_medium=member_android" target="_blank"><img src="Portfolio_images/Li_logo.png"></a></div>
-      </section> -->
+         <div class="cright"><b>This is my <span>Certificate of Participation</span> in the <span>Level 1.1: E-Commerce & Tech Quiz</span> of the <span>Flipkart Grid 5.0 Software Development Track</span>, organised by <span>Flipkart</span>.</b><br>
+         Click on the image for a better view, or check it out by clicking below:<br><br><a href="https://www.linkedin.com/posts/anshika-chhabra-97ab05257_flipkartgrid-participation-softwaredevelopment-activity-7095232547952967680-h0XN?utm_source=share&utm_medium=member_desktop" target="_blank"><img src="Portfolio_images/Li_logo.png"></a></div>
+      </section>
+      <section class="csec">
+         <div class="cleft">
+            <a href="/" target="_blank"><img src="Portfolio_images/LearningPython_LInL_Certificate.jpeg"></a>
+         </div>
+         <div class="cright"><b>This is the <span>Certificate of Completion</span> of the <span>"Learning Python"</span> Course offered by <span>LinkedIn Learning</span>.</b><br>
+         Click on the image for a better view, or check it out by clicking below:<br><br><a href="https://www.linkedin.com/posts/anshika-chhabra-97ab05257_certificate-of-completion-activity-7100058395986030592-tSfI?utm_source=share&utm_medium=member_desktop" target="_blank"><img src="Portfolio_images/Li_logo.png"></a></div>
+      </section>
+      <section class="csec">
+         <div class="cleft">
+            <a href="/" target="_blank"><img src="Portfolio_images/HTMLEssentialTraining_LInL_Certificate.jpeg"></a>
+         </div>
+         <div class="cright"><b>This is the <span>Certificate of Completion</span> of the <span>"HTML Essential Training"</span> Course offered by <span>LinkedIn Learning</span>.</b><br>
+         Click on the image for a better view, or check it out by clicking below:<br><br><a href="https://www.linkedin.com/posts/anshika-chhabra-97ab05257_certificate-of-completion-activity-7100494882359693312--2h3?utm_source=share&utm_medium=member_desktop" target="_blank"><img src="Portfolio_images/Li_logo.png"></a></div>
+      </section>
+      <section class="csec">
+         <div class="cleft">
+            <a href="/" target="_blank"><img src="Portfolio_images/CSSEssentialTraining_LInL_Certificate.jpeg"></a>
+         </div>
+         <div class="cright"><b>This is the <span>Certificate of Completion</span> of the <span>"CSS Essential Training (2019)"</span> Course offered by <span>LinkedIn Learning</span>.</b><br>
+         Click on the image for a better view, or check it out by clicking below:<br><br><a href="https://www.linkedin.com/posts/anshika-chhabra-97ab05257_certificate-of-completion-activity-7102239835985199105-v2V3?utm_source=share&utm_medium=member_desktop" target="_blank"><img src="Portfolio_images/Li_logo.png"></a></div>
+      </section>
+      <section class="csec">
+         <div class="cleft">
+            <a href="https://drive.google.com/file/d/1Gv3i870-6-eeR3ODDWb80ys_N1qMTSdj/view?usp=sharing" target="_blank"><img src="Portfolio_images/YBI_Certificate.jpg"></a>
+         </div>
+         <div class="cright"><b>This is the <span>Certificate of Completion</span> of the <span>"AI & Data Skills Internship Program"</span> offered by <span>YBI Foundation</span>.</b><br>
+         Click on the image for a better view, or check it out by clicking below:<br><br><a href="https://www.linkedin.com/posts/anshika-chhabra-97ab05257_internship-learning-certification-activity-7111192013428957184-rhqP?utm_source=share&utm_medium=member_desktop&rcm=ACoAAD9Ymy4BgLQip6BHrSr-Vz5T_nHgmDa8LG0" target="_blank"><img src="Portfolio_images/Li_logo.png"></a></div>
+      </section>
+      <section class="csec">
+         <div class="cleft">
+            <a href="https://drive.google.com/file/d/1Gtf2ox8sY2TUSC1RcGUbd8eyamy4x7uH/view?usp=sharing" target="_blank"><img src="Portfolio_images/NPTEL_2.jpg"></a>
+         </div>
+         <div class="cright"><b>This is the <span>Elite Certificate</span> of the <span>NPTEL</span> Course, <span>"Developing Soft Skills & Personality"</span>.</b><br>
+         Click on the image for a better view, or check it out by clicking below:<br><br><a href="https://www.linkedin.com/posts/anshika-chhabra-97ab05257_newcertification-softskills-personality-activity-7117421233637355521-gViJ?utm_source=share&utm_medium=member_desktop&rcm=ACoAAD9Ymy4BgLQip6BHrSr-Vz5T_nHgmDa8LG0" target="_blank"><img src="Portfolio_images/Li_logo.png"></a></div>
+      </section>
    </main>
+   <script>
+      function toggleMenu() {
+         const navLinks = document.querySelector('nav ul');
+         navLinks.classList.toggle('active');
+      }
+   </script>
+   <footer style="margin-top: 70px;">
+    ℹ️ This website was developed by Anshika Chhabra in 2023 and is still a work in progress.
+   </footer>
 </body>
 </html>
